added style changes for single-panel layout

--- a/styles/account-sidebar.less
+++ b/styles/account-sidebar.less
@@ -1,5 +1,7 @@
 .scroll-region
-{background: @light-gray;}
+{
+  background: @light-gray;
+}
 .account-sidebar{
   background: @account-sidebar-bg;
   &.scroll-region:after {
@@ -35,7 +37,3 @@
   }
 
 }
-
-
-
-
