--- a/styles/thread-list.less
+++ b/styles/thread-list.less
@@ -1,8 +1,18 @@
 .list-container{
 	& .list-item{
-		border-bottom: none;
-		&.selected div.personal-level-icon img{
-			-webkit-filter : @filter-full-bright;
+		// border-bottom: none;
+		&.next-is-selected{
+			border-bottom : none;
+		}	
+		&.selected{
+			background : @thread-list-item-focused-bg;
+			border-bottom:solid 1px @light-gray;
+			&:hover{
+				background-color:@lightest-blue !important;
+			}
+			& div.personal-level-icon img{
+			   -webkit-filter : @filter-full-bright;
+			}
 		}
 		&.focused{
 			background: @thread-list-item-focused-bg;
@@ -19,20 +29,42 @@
 		}
 	}
 }
-.thread-list .focused{
-	& .thread-icon{
-		-webkit-filter: @filter-full-bright;
-	}
-	& .mail-label, .draft-list .focused .mail-label{
-		background: @bright-green !important; 
-		color: white !important;
-	    -webkit-filter: @filter-full-bright;
-	}
-	& .timestamp, .draft-list .focused .timestamp{
-		color: @awesome-pink;
-		opacity: 1;
+.list-tabular .list-tabular-item{
+	&.keyboard-cursor{
+		border-right : 4px solid @awesome-pink;
+		border-left:none;
+	}	
+	&.selected .checkmark .inner{
+		background-color : @bright-green;
 	}
 }
+.thread-list{
+	& .list-item.selected:hover .list-column-HoverActions .inner{
+		background-image: @list-selected-hover-gradient;
+	}
+	& .focused{
+		& .thread-icon{
+			-webkit-filter: @filter-full-bright;
+		}
+		& .mail-label, .draft-list .focused .mail-label{
+			background: @bright-green !important; 
+			color: white !important;
+		    -webkit-filter: @filter-full-bright;
+		}
+		& .timestamp, .draft-list .focused .timestamp{
+			color: @awesome-pink;
+			opacity: 1;
+		}
+	}
+	/** to avoid the blue background when an item is selected in single layout
+	   and user selects double layout **/
+	&.handler-split .list-item.selected{
+		background: @light-ghee;
+		color:inherit;
+		border-bottom:solid 1px @light-gray;
+	}
+}
+
 .mail-important-icon.enabled.active{
 	background-image: @thread-list-important-icon-bg;
     -webkit-filter: @filter-full-bright;
