--- a/styles/sheet-toolbar.less
+++ b/styles/sheet-toolbar.less
@@ -4,8 +4,29 @@
 		background: @sheet-toolbar-bg;
 		color:white;
 	}
+	& .selection-bar .absolute{
+		background-color: @midnight-gray !important;
+		border-left:none;
+		border-right:none;	
+		& .inner .centered{
+			color:white;
+		}
+	}
 	& .btn-toolbar:hover{
 		background: @sheet-toolbar-btn-hover;
 	}
+	& .item-back {
+		& .item-back-title{
+			color:@pink;
+		}
+		& img.content-mask{
+			background-color:@bright-green;
+		}
+	}
+	.btn-icon img.content-mask{
+		background-color:@bright-green;
+		&:hover{
+			background-color: white;
+		}
+	}	
 }
-
