--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -9,26 +9,40 @@
 @light-pink : #FDA29D;
 @pink : #E26A6A;
 @darker-pink : #EB6361;
+@lightest-blue : #f2f2f2;
+@midnight-gray : #414345;
+@midnight-black : #232526;
+@light-ghee : #ECE9E6;
 
+//gradients
+@yellow-purple : linear-gradient(to right, rgba(247,255,0, 0.2), rgba(144, 78, 149, 0.4));
+@yellow-green : linear-gradient(to right, rgba(247,255,0,0.25), rgba(77,160,176, 0.45));
+@green-purple : linear-gradient(to right, rgba(219,214,92,0.6), rgba(86,20,176, 0.4));
+@green-only-gradient : linear-gradient(to right, rgba(141,194,111,0.3), rgba(118,184,82,0.6));
+@red-purple : linear-gradient(to right, rgba(220,36,48,0.35), rgba(123,67,151,0.7));
+@peach-green : linear-gradient(to right, rgba(191,230,186,0.5), rgba(211,149,155,0.5));
+@orange-purple-original : linear-gradient(to right, rgba(233,100,67,0.6) , rgba(144,78,149,0.6));
+@midnight-black-gray : linear-gradient(to left,@midnight-black,@midnight-gray);
+@list-selected-hover-gradient : -webkit-linear-gradient(left, rgba(220, 235, 250, 0) 0%, @lightest-blue 50%, @lightest-blue 100%) !important;
 //=============================== Background ===========================//
 
 //== Sheet Toolbar
-@sheet-toolbar-bg: linear-gradient(to left, #232526 , #414345) !important;
-@sheet-toolbar-btn-hover: #97CE68 !important;
+@sheet-toolbar-bg: @midnight-black-gray;
+@sheet-toolbar-btn-hover: @bright-green !important;
 
 //== Account Sidebar
-@account-sidebar-bg: linear-gradient(to right, rgba(233,100,67,0.6) , rgba(144,78,149,0.6)) !important;
+@account-sidebar-bg: @orange-purple-original !important;
 /* Background pattern from subtlepatterns.com */
 @account-sidebar-bg-pattern: url(https://raw.githubusercontent.com/arimai/n1-honeyduke/master/images/pattern5.png) repeat !important; 
 @account-sidebar-selected-item-bg: rgba(0, 0, 0, 0.3) !important;
 
 //== Thread List
-@thread-list-item-focused-bg: #ECE9E6 !important;
+@thread-list-item-focused-bg: @light-ghee !important;
 @thread-list-item-focused-border-bg: rgba(255,97,109,0.7) !important;
 @thread-list-important-icon-bg: url(https://raw.githubusercontent.com/arimai/n1-honeyduke/master/images/imp-icon-green.png) !important; 
 
 //== Mail Content
-@composer-button-bg: #97CE68 !important;
+@composer-button-bg: @bright-green !important;
 
 //== Right Sidebar
 @right-sidebar-bg: rgba(239,238,236,0.5) !important;
