added theme preview colors

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -13,6 +13,7 @@
 @midnight-gray : #414345;
 @midnight-black : #232526;
 @light-ghee : #ECE9E6;
+@light-purple : #C8A8CA;
 
 //gradients
 @yellow-purple : linear-gradient(to right, rgba(247,255,0, 0.2), rgba(144, 78, 149, 0.4));
@@ -54,3 +55,9 @@
 
 //=============================== Filters ===========================//
 @filter-full-bright : brightness(100%) grayscale(0%) !important;
+
+//=============================== Theme preview ===========================//
+@component-active-color: @bright-green;
+@toolbar-background-color: @midnight-gray;
+@panel-background-color: @light-purple;
+
