updated panel background color

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -13,7 +13,7 @@
 @midnight-gray : #414345;
 @midnight-black : #232526;
 @light-ghee : #ECE9E6;
-@light-purple : #C8A8CA;
+@light-purple : #E3D3E4;
 
 //gradients
 @yellow-purple : linear-gradient(to right, rgba(247,255,0, 0.2), rgba(144, 78, 149, 0.4));
