fixed the mail default label color

--- a/styles/thread-list.less
+++ b/styles/thread-list.less
@@ -67,7 +67,7 @@
 			//restoring to defaults
 			background-color: rgb(243,226,202) !important;
 			box-shadow: rgb(194, 135, 45) 0px 0px 1px inset, rgba(255, 255, 255, 0.498039) 0px 1px 1px inset, rgba(255, 255, 255, 0.498039) 0px 0.5px 0px !important;		
-			color: rgb(130, 95, 43);
+			color: rgb(130, 95, 43) !important;
 			-webkit-filter: @filter-full-bright !important;
 		}
 		& .mail-important-icon,& .thread-icon{
